# datacommons-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  cache.py  cli.py  clients.py  exceptions.py  pyproject.toml  requirements.txt  server.py  smithery.yaml  topics.py
data/topics/: topic_cache.json
data_models/: charts.py  enums.py  observations.py  settings.py
datacommons_mcp/: __init__.py  _constrained_vars.py  cli.py  server.py  services.py  settings.py  utils.py  version.py
datacommons_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datacommons_mcp/data_models/: search.py
src/datacommons_mcp_server/: server.py
src/hello_server/: server.py
