[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacommons-mcp"
version = "1.0.0"
description = "Data Commons MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "fastmcp",
    "requests",
    "datacommons-client",
    "pydantic>=2.11.7",
    "pydantic-settings",
    "python-dateutil>=2.9.0.post0",
]
urls = {Homepage = "https://github.com/datacommonsorg/agent-toolkit"}

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["datacommons_mcp*"]

[tool.setuptools.package-data]
datacommons_mcp = ["**/*.json"]

[tool.smithery] 
server = "datacommons_mcp.server:create_server"
